<resources>
    <string name="app_name">Калькулятор</string>
    <string name="buttonClear">C</string>
    <string name="buttonPlusMinus">+/-</string>
    <string name="buttonModuleDivide">%</string>
    <string name="buttonDivide">/</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonMultiply">x</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="buttonMinus">-</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="buttonPlus">+</string>
    <string name="button0">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonEqual">=</string>
    <string name="percent_sign">80&#x0025;</string>
    <string name="close_app">закрыть</string>
    <string name="close_app_choice">Приложение закрыто</string>
    <string name="information_message">"Пожалуйста, веедите два номера и оператор между ними."</string>
</resources>