<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@color/black"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultOnScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:hint="0.0"
                android:paddingVertical="@dimen/paddingVerticale"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/fontSize"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonClear"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/buttonPlusMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonPlusMinus"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/buttonModuleDivide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonModuleDivide"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/red"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonDivide"
                android:textSize="23dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button7"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button8"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button9"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/red"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonMultiply"
                android:textSize="23dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button4"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button5"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button6"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/red"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonMinus"
                android:textSize="23dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button1"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button2"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button3"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.25"
                android:backgroundTint="@color/red"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonPlus"
                android:textSize="23dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.66"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/button0"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonDot"
                android:textColor="@color/black"
                android:textSize="23dp"
                app:rippleColor="#00FE68" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:padding="@dimen/buttonPadding"
                android:text="@string/buttonEqual"
                android:textSize="23dp" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>